"push Notification TEST."
Signed-off-by: karun <karun.fluper@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_notifications">Notifications</string>
 
     <!--Menu Options-->
-    <string name="option_txt_1">Christmas</string>
+    <string name="option_txt_1">Good Morning</string>
     <string name="option_txt_2">Happy New Year</string>
     <string name="option_txt_3">Makar Sakranti</string>
     <string name="option_txt_4">Vasant Panchami</string>
